Actions
Bug #10642
closedsgen: NULL pointer errors
Start date:
2019-04-01
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/thread.h:36, from ../../common/sys/modctl.h:35, from ../../common/io/scsi/targets/sgen.c:40: ../../common/io/scsi/targets/sgen.c: In function 'sgen_do_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/scsi/targets/sgen.c:635:29: note: in expansion of macro 'NULL' instance, DDI_NT_SGEN, NULL) == DDI_FAILURE) { ^~~~ In file included from ../../common/sys/scsi/scsi_types.h:61:0, from ../../common/sys/scsi/scsi.h:36, from ../../common/io/scsi/targets/sgen.c:42: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit a465bc80d32c819bfe5742c9aa8c4d706acbae1c
commit a465bc80d32c819bfe5742c9aa8c4d706acbae1c Author: Toomas Soome <tsoome@me.com> Date: 2019-04-05T05:35:49.000Z 10642 sgen: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions